apps/no-room-in-hell/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nmrih-server
  labels:
    app: nmrih
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nmrih
  template:
    metadata:
      labels:
        app: nmrih
    spec:
      containers:
        - name: nmrih-server
          image: ghcr.io/phartenfeller/no-more-room-in-hell:latest
          ports:
            - containerPort: 27015
              protocol: TCP
            - containerPort: 27015
              protocol: UDP
            - containerPort: 1200
              protocol: TCP
            - containerPort: 27005
              protocol: UDP
            - containerPort: 27020
              protocol: UDP
            - containerPort: 26901
              protocol: UDP
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: nmrih-service
  labels:
    app: nmrih
spec:
  type: NodePort
  selector:
    app: nmrih
  ports:
    - name: tcp-port
      protocol: TCP
      port: 27015
      targetPort: 27015
      nodePort: 30015
    - name: udp-port-27015
      protocol: UDP
      port: 27015
      targetPort: 27015
      nodePort: 30016
    - name: tcp-port-1200
      protocol: TCP
      port: 1200
      targetPort: 1200
      nodePort: 30017
    - name: udp-port-27005
      protocol: UDP
      port: 27005
      targetPort: 27005
      nodePort: 30018
    - name: udp-port-27020
      protocol: UDP
      port: 27020
      targetPort: 27020
      nodePort: 30019
    - name: udp-port-26901
      protocol: UDP
      port: 26901
      targetPort: 26901
      nodePort: 30020
