apps/no-room-in-hell/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nmrih-server
  namespace: default
spec:
  selector:
    app: nmrih-server
  ports:
    - protocol: UDP
      port: 27010
      targetPort: 27010
    - protocol: TCP
      port: 27015
      targetPort: 27015
    - protocol: UDP
      port: 27015
      targetPort: 27015
    - protocol: UDP
      port: 27020
      targetPort: 27020
